platform/infra/terraform/mgmt/terraform/templates/manifests/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ${ARGOCD_DOMAIN_NAME}
      http:
        paths:
          - path: /argocd(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  name: https
