platform/infra/terraform/mgmt/terraform/templates/manifests/ingress-devlake.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devlake-ingress
  namespace: devlake
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: ${DEVLAKE_DOMAIN_NAME}
      http:
        paths:
          - path: /devlake(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: devlake-ui
                port:
                  number: 4000
